# bilibili-music-list-exporter

./: .gitignore  .tmp_cli.py  .tmp_llm_parser.py  .tmp_self_check.py  README.md  bili-music-list-gui.spec  bili-music-list.spec  pyproject.toml
output/: music_list.csv  music_list_simple.csv
src/bili_music_list/: bilibili_client.py  cli.py  extractors.py  gui.py  llm_parser.py  models.py  netease_client.py
src/bili_music_list.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/bili_music_list/output/: music_list_failed_videos.csv
tests/: test_extractors.py  test_netease_client.py
